-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.1
-
None
-
Linux
-
8cb02e23abbefc9d020707fc1a2d8b6eb4e103b6 a65ad5e919209f7b934e84516d732eaf2edd227f
When I create a qml component dynamically that has a Window as root that is flaged as Qt.Dialog (and only with a Dialog), it doesn't stop the input of the parent when I set the modality. Not with Application nor WindowModality
This happens when creating from javascript and also with a loader but not when it's directly inside the parent window.
Attached is a test app I used to reproduce, with combo boxes to select the possible combinations of windows and modality.
- relates to
-
QTBUG-38578 Dynamically created QtQuick Dialogs not working on Android device
-
- Closed
-
-
QTBUG-52944 Transient parent of Window is not clear when Loader is involved
-
- Closed
-
| For Gerrit Dashboard: QTBUG-33644 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 66714,4 | xcb: every window should have a title in debug mode | stable | qt/qtbase | Status: MERGED | +2 | 0 |
| 66765,2 | xcb: transient windows with no parent belong to the focused window | stable | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 66975,1 | A dynamically created Window can have a parent Window | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 66978,2 | A dynamically-created Window can have a parent Item and vice-versa | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |